--- a/src/components/arrivals/arrivals.scss
+++ b/src/components/arrivals/arrivals.scss
@@ -1,6 +1,6 @@
 .arrivals {
     background: #ffff;
-    padding: 26px 29px 0;
+    padding: 26px 29px 37px ;
 
     .arrivals_details {
         .plurk {
@@ -66,7 +66,7 @@ line-height: normal;
             font-weight: 500;
             line-height: normal;
             padding: 5px 10px;
-            margin: 0 10px;
+            margin: 0 33px;
             border-radius: 6px;
         }
 
@@ -134,9 +134,8 @@ line-height: normal;
                 line-height: normal;
             }
         }
-
         li {
-            margin: 0 15px;
+            margin: 0 10px;
             padding: 10px;
         }
 
